# sgx-runtime

./: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
substrate-sgx/sp-io/: Cargo.toml  with_sgx.rs  without_sgx.rs
test_no_std/: Cargo.toml
