[package]
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = '2018'
homepage = 'https://www.scs.ch'
license = 'Unlicense'
name = 'sgx-runtime'
repository = 'https://github.com/scs/sgx-runtime/'
version = '0.8.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
# alias "parity-scale-code" to "codec"
codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}

# Substrate dependencies
frame-benchmarking = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-executive = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system-benchmarking = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-system-rpc-runtime-api = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-aura = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-balances = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-grandpa = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-api = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { tag = "monthly-2021-09+1", version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-session = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
